refactor: Standardize CSS for UI catalog

--- a/dev/proto/ui_catalog/assets/scss/style.scss
+++ b/dev/proto/ui_catalog/assets/scss/style.scss
@@ -7,3 +7,6 @@
 @use "components/index" as components;
 @use "themes/index" as themes;
 @use "variables/index" as variables;
+
+//	UI Catalog
+@use "catalog";
