--- a/dev/proto/ui_catalog/assets/scss/components/feedbacks/dialog.scss
+++ b/dev/proto/ui_catalog/assets/scss/components/feedbacks/dialog.scss
@@ -6,10 +6,23 @@
 //
 //	```html
 //	<div class="ui_dialog">
-//	 <div class="dialog"></div>
+//	 <div class="dialog">
+//	  <div class="head">
+//	   <h4>Dialog</h4>
+//	  </div>
+//	  <div class="body">
+//	   <p>Content</p>
+//	  </div>
+//	  <div class="foot">
+//	   <button class="ui_button primary text">Close</button>
+//	  </div>
+//	 </div>
 //	</div>
 //	```
 //------------------------------------------------------------------------------
+
+@use "../../functions/string" as string;
+@use "../../themes/index" as themes;
 
 body:has(.ui_dialog.open)
 {
@@ -40,20 +53,106 @@ body:has(.ui_dialog.open)
 
 	.dialog
 	{
-		display: inline-block;
+		display: flex;
+		flex-direction: column;
 		width: 60%;
 		min-width: var(--size-8xl);
 		max-height: 80%;
 		background-color: var(--color-surface);
-		overflow: auto;
+		border-radius: var(--radius-md);
 		position: absolute;
 		top: 50%;
 		left: 50%;
 		transform: translate(-50%, -50%);
-		padding: var(--spacing-md);
-		border-radius: var(--radius-md);
 		transition: all 0.3s 0s ease-in-out;
+		overflow: hidden;
+
+
+		//----------------------------------------------------------------------
+		//	Content
+		//----------------------------------------------------------------------
+
+		.head
+		{
+			padding: var(--spacing-md);
+			border-bottom: 1px solid var(--color-border);
+			font-size: var(--fs-lg);
+			font-weight: bold;
+		}
+
+		.body
+		{
+			overflow: auto;
+			padding: var(--spacing-md);
+		}
+
+		.foot
+		{
+			display: flex;
+			justify-content: flex-end;
+			padding: var(--spacing-md);
+			border-top: 1px solid var(--color-border);
+		}
 	}
+
+
+	//--------------------------------------------------------------------------
+	//	Sizes
+	//--------------------------------------------------------------------------
+
+	&.small
+	{
+		.dialog
+		{
+			width: 40%;
+		}
+	}
+
+	&.large
+	{
+		.dialog
+		{
+			width: 80%;
+		}
+	}
+
+	&.full
+	{
+		.dialog
+		{
+			width: 100%;
+			height: 100%;
+			max-height: none;
+
+			.body
+			{
+				flex-grow: 1;
+			}
+		}
+	}
+
+
+	//--------------------------------------------------------------------------
+	//	Colors
+	//--------------------------------------------------------------------------
+
+	@each $color in themes.$theme_colors
+	{
+		$class_name: string.str-replace(#{$color}, "-", "_");
+		&.#{$class_name}
+		{
+			.dialog
+			{
+				.head
+				{
+					background-color: var(--color-#{$color});
+					color: var(--color-#{$color}-text);
+					border: none;
+				}
+			}
+		}
+	}
+
 
 	//--------------------------------------------------------------------------
 	//	Animations
