--- a/dev/proto/ui_catalog/assets/scss/common/pointer_event.scss
+++ b/dev/proto/ui_catalog/assets/scss/common/pointer_event.scss
@@ -1,9 +1,8 @@
 //------------------------------------------------------------------------------
-//	Common styles
+//	Pointer event
 //------------------------------------------------------------------------------
 
-@forward "flex";
-@forward "overflow";
-@forward "pointer_event";
-@forward "spacer";
-@forward "typography";
+.pointer_event_none
+{
+    pointer-events: none;
+}
