--- a/dev/proto/ui_catalog/assets/scss/components/inputs/floating_button.scss
+++ b/dev/proto/ui_catalog/assets/scss/components/inputs/floating_button.scss
@@ -25,6 +25,7 @@
 	cursor: pointer;
 	box-shadow: var(--shadow-md);
 	transition: all 0.3s 0s ease-in-out;
+	white-space: nowrap;
 
 
 	//--------------------------------------------------------------------------
