--- a/dev/proto/ui_catalog/assets/scss/components/inputs/button.scss
+++ b/dev/proto/ui_catalog/assets/scss/components/inputs/button.scss
@@ -19,6 +19,7 @@
 	padding: var(--spacing-sm) var(--spacing-lg);
 	cursor: pointer;
 	transition: all 0.3s 0s ease-in-out;
+	white-space: nowrap;
 
 
 	//--------------------------------------------------------------------------
