--- a/dev/proto/ui_catalog/assets/scss/components/layouts/box.scss
+++ b/dev/proto/ui_catalog/assets/scss/components/layouts/box.scss
@@ -188,6 +188,39 @@
 
 
 	//--------------------------------------------------------------------------
+	//	Border
+	//--------------------------------------------------------------------------
+
+	&.border
+	{
+		border: 1px solid var(--color-border);
+
+		@each $color in themes.$theme_colors
+		{
+			$class_name: string.str-replace(#{$color}, "-", "_");
+			&.#{$class_name}
+			{
+				border-color: var(--color-#{$color});
+
+				&_light
+				{
+					border-color: var(--color-#{$color}-light);
+				}
+				&_dark
+				{
+					border-color: var(--color-#{$color}-dark);
+				}
+			}
+		}
+
+		&_top { border-top: 1px solid var(--color-border); }
+		&_right { border-right: 1px solid var(--color-border); }
+		&_bottom { border-bottom: 1px solid var(--color-border); }
+		&_left { border-left: 1px solid var(--color-border); }
+	}
+
+
+	//--------------------------------------------------------------------------
 	//	Radus
 	//--------------------------------------------------------------------------
 
