--- a/dev/proto/ui_catalog/assets/scss/components/datas/icon.scss
+++ b/dev/proto/ui_catalog/assets/scss/components/datas/icon.scss
@@ -79,7 +79,7 @@
 	//	Actions
 	//--------------------------------------------------------------------------
 
-	.clickable
+	&.clickable
 	{
 		cursor: pointer;
 
