--- a/dev/proto/ui_catalog/assets/scss/components/feedbacks/skelton.scss
+++ b/dev/proto/ui_catalog/assets/scss/components/feedbacks/skelton.scss
@@ -1,8 +1,7 @@
 //------------------------------------------------------------------------------
-//	Feedback components
+//	UI skelton
 //------------------------------------------------------------------------------
 
-@forward "alert";
-@forward "dialog";
-@forward "progress";
-@forward "skelton";
+.ui_skelton
+{
+}
