--- a/dev/proto/ui_catalog/assets/scss/components/feedbacks/progress.scss
+++ b/dev/proto/ui_catalog/assets/scss/components/feedbacks/progress.scss
@@ -17,7 +17,7 @@
 	border-radius: var(--radius-circle);
 	border: 3px solid var(--color-border);
 	border-top-color: var(--color-transparent);
-	animation: spin 0.8s infinite linear;
+	animation: progress_spin 0.8s infinite linear;
 
 
 	//--------------------------------------------------------------------------
@@ -67,7 +67,7 @@
 	}
 }
 
-@keyframes spin
+@keyframes progress_spin
 {
 	0%
 	{
@@ -103,7 +103,7 @@
 		width: 20%;
 		height: 100%;
 		background-color: var(--color-border-dark);
-		animation: move 1.2s infinite linear;
+		animation: progress_linear 1.2s infinite linear;
 	}
 
 
@@ -126,7 +126,7 @@
 	}
 }
 
-@keyframes move
+@keyframes progress_linear
 {
 	0%
 	{
