[UI catalog] feat: Add snackbar component

--- a/dev/proto/ui_catalog/assets/scss/components/feedbacks/progress.scss
+++ b/dev/proto/ui_catalog/assets/scss/components/feedbacks/progress.scss
@@ -1,5 +1,12 @@
 //------------------------------------------------------------------------------
 //	UI progress
+//
+//
+//	# Usage
+//
+//	```html
+//	<div class="ui_progress spin"></div>
+//	```
 //------------------------------------------------------------------------------
 
 @use "../../functions/string" as string;
