--- a/dev/proto/ui_catalog/assets/scss/components/feedbacks/skeleton.scss
+++ b/dev/proto/ui_catalog/assets/scss/components/feedbacks/skeleton.scss
@@ -1,5 +1,12 @@
 //------------------------------------------------------------------------------
 //	UI skeleton
+//
+//
+//	# Usage
+//
+//	```html
+//	<div class="ui_skeleton text"></div>
+//	```
 //------------------------------------------------------------------------------
 
 .ui_skeleton
