[UI catalog] feat: Update snackbar component

--- a/dev/proto/ui_catalog/assets/scss/catalog.scss
+++ b/dev/proto/ui_catalog/assets/scss/catalog.scss
@@ -53,7 +53,7 @@
 		@extend .flex_column;
 		@extend .flex_gap_2xl;
 		@extend .padding_xl;
-		@extend .overflow_hidden_x;
+		@extend .overflow_hidden;
 		@extend .ui_dialog_container;
 	}
 
