--- a/dev/proto/ui_catalog/assets/scss/variables/opacities.scss
+++ b/dev/proto/ui_catalog/assets/scss/variables/opacities.scss
@@ -2,7 +2,7 @@
 //	Common opacities
 //------------------------------------------------------------------------------
 
-$opacities: none, hover, full;
+$opacities: "none", "hover", "full";
 
 :root
 {
