--- a/dev/proto/ui_catalog/assets/scss/variables/radii.scss
+++ b/dev/proto/ui_catalog/assets/scss/variables/radii.scss
@@ -2,7 +2,7 @@
 //	Common radii
 //------------------------------------------------------------------------------
 
-$radii: 3xs, 2xs, xs, sm, md, lg, xl, 2xl, 3xl, 4xl, 5xl, circle;
+$radii: "3xs", "2xs", "xs", "sm", "md", "lg", "xl", "2xl", "3xl", "4xl", "5xl";
 
 :root
 {
