--- a/dev/proto/ui_catalog/assets/scss/variables/shadows.scss
+++ b/dev/proto/ui_catalog/assets/scss/variables/shadows.scss
@@ -2,7 +2,7 @@
 //	Common shadows
 //------------------------------------------------------------------------------
 
-$shadows: none, sm, md, lg;
+$shadows: "none", "sm", "md", "lg";
 
 :root
 {
