--- a/dev/proto/ui_catalog/assets/scss/variables/sizes.scss
+++ b/dev/proto/ui_catalog/assets/scss/variables/sizes.scss
@@ -2,7 +2,7 @@
 //	Common sizes
 //------------------------------------------------------------------------------
 
-$sizes: 5xs, 4xs, 3xs, 2xs, xs, sm, md, lg, xl, 2xl, 3xl, 4xl, 5xl, 6xl, 7xl, 8xl, 9xl, 10xl;
+$sizes: "5xs", "4xs", "3xs", "2xs", "xs", "sm", "md", "lg", "xl", "2xl", "3xl", "4xl", "5xl", "6xl", "7xl", "8xl", "9xl", "10xl";
 
 :root
 {
