[UI catalog] feat: Add grow animation

--- a/dev/proto/ui_catalog/assets/scss/components/feedbacks/snackbar.scss
+++ b/dev/proto/ui_catalog/assets/scss/components/feedbacks/snackbar.scss
@@ -50,6 +50,16 @@
 		}
 	}
 
+	&.grow
+	{
+		transform: scale(0);
+
+		&.open
+		{
+			transform: scale(1);
+		}
+	}
+
 	&.flash
 	{
 		transition: none;
