--- a/dev/proto/ui_catalog/assets/scss/components/feedbacks/dialog.scss
+++ b/dev/proto/ui_catalog/assets/scss/components/feedbacks/dialog.scss
@@ -174,6 +174,22 @@ body:has(.ui_dialog.open)
 		}
 	}
 
+	&.grow
+	{
+		.dialog
+		{
+			transform: translate(-50%, -50%) scale(0);
+		}
+
+		&.open
+		{
+			.dialog
+			{
+				transform: translate(-50%, -50%) scale(1);
+			}
+		}
+	}
+
 	&.flash
 	{
 		transition: none;
