--- a/dev/proto/ui_catalog/assets/scss/components/navigations/index.scss
+++ b/dev/proto/ui_catalog/assets/scss/components/navigations/index.scss
@@ -1,9 +1,5 @@
 //------------------------------------------------------------------------------
-//	Component styles
+//	Navigation component
 //------------------------------------------------------------------------------
 
-@forward "datas/index";
-@forward "inputs/index";
-@forward "feedbacks/index";
-@forward "layouts/index";
-@forward "navigations/index";
+@forward "crumbs";
