[UI catalog] feat: Add drawer component

--- a/dev/proto/ui_catalog/assets/scss/catalog.scss
+++ b/dev/proto/ui_catalog/assets/scss/catalog.scss
@@ -55,6 +55,7 @@
 		@extend .padding_xl;
 		@extend .overflow_hidden;
 		@extend .ui_dialog_container;
+		@extend .ui_drawer_container;
 	}
 
 	&.parent_section
