--- a/dev/proto/ui_catalog/assets/scss/themes/meower_dark.scss
+++ b/dev/proto/ui_catalog/assets/scss/themes/meower_dark.scss
@@ -71,6 +71,8 @@
 	--color-border-light: var(--color-blue-grey-accent-3);
 	--color-border-dark: var(--color-black);
 	--color-shadow: rgba(255, 255, 255, 0.3);
+	--color-shadow-weak: rgba(255, 255, 255, 0.1);
+	--color-shadow-strong: rgba(255, 255, 255, 0.4);
 
 	//	States
 	--color-disabled: var(--color-grey-darken-1);
