--- a/dev/proto/ui_catalog/assets/scss/themes/meower_light.scss
+++ b/dev/proto/ui_catalog/assets/scss/themes/meower_light.scss
@@ -71,6 +71,8 @@
 	--color-border-light: var(--color-blue-grey-accent-3);
 	--color-border-dark: var(--color-black);
 	--color-shadow: rgba(0, 0, 0, 0.3);
+	--color-shadow-weak: rgba(0, 0, 0, 0.1);
+	--color-shadow-strong: rgba(0, 0, 0, 0.4);
 
 	//	States
 	--color-disabled: var(--color-grey-lighten-1);
