--- a/dev/proto/ui_catalog/assets/scss/common/typography.scss
+++ b/dev/proto/ui_catalog/assets/scss/common/typography.scss
@@ -56,3 +56,23 @@
 {
 	font-size: var(--fs-5xl);
 }
+
+
+//------------------------------------------------------------------------------
+//	Text align
+//------------------------------------------------------------------------------
+
+.text_align_left
+{
+	text-align: left;
+}
+
+.text_align_center
+{
+	text-align: center;
+}
+
+.text_align_right
+{
+	text-align: right;
+}
