--- a/dev/proto/ui_catalog/assets/scss/variables/z_indexes.scss
+++ b/dev/proto/ui_catalog/assets/scss/variables/z_indexes.scss
@@ -9,6 +9,7 @@ $z_indexes: "background", "default", "backdrop", "dialog", "snackbar", "front";
 	--z-index-background: 0;
 	--z-index-default: 1;
 	--z-index-backdrop: 99;
+	--z-index-drawer: 100;
 	--z-index-dialog: 100;
 	--z-index-snackbar: 200;
 	--z-index-front: 999;
