[UI catalog] feat: Add badge component

--- a/dev/proto/ui_catalog/assets/scss/components/datas/index.scss
+++ b/dev/proto/ui_catalog/assets/scss/components/datas/index.scss
@@ -2,6 +2,7 @@
 //	Data components
 //------------------------------------------------------------------------------
 
+@forward "badge";
 @forward "heading";
 @forward "icon";
 @forward "list";
