--- a/dev/proto/ui_catalog/assets/scss/components/navigations/drawer.scss
+++ b/dev/proto/ui_catalog/assets/scss/components/navigations/drawer.scss
@@ -1,5 +1,20 @@
 //------------------------------------------------------------------------------
 //	UI drawer
+//
+//
+//	# Usage
+//
+//	```html
+//	<div class="ui_drawer">
+//	 <div class="drawer">
+//	  <ul class="ui_list">
+//	   <li>Home</li>
+//	   <li>Mypage</li>
+//	   <li>Settings</li>
+//	  </ul>
+//	 </div>
+//	</div>
+//	```
 //------------------------------------------------------------------------------
 
 body:has(.ui_drawer.open)
