--- a/dev/proto/ui_catalog/assets/scss/variables/z_indexes.scss
+++ b/dev/proto/ui_catalog/assets/scss/variables/z_indexes.scss
@@ -8,7 +8,8 @@ $z_indexes: "background", "default", "backdrop", "dialog", "snackbar", "front";
 {
 	--z-index-background: 0;
 	--z-index-default: 1;
-	--z-index-backdrop: 99;
+	--z-index-badge: 5;
+	--z-index-badge-content: 6;
 	--z-index-drawer: 100;
 	--z-index-dialog: 100;
 	--z-index-snackbar: 200;
