--- a/dev/proto/ui_catalog/assets/scss/components/datas/badge.scss
+++ b/dev/proto/ui_catalog/assets/scss/components/datas/badge.scss
@@ -6,6 +6,7 @@
 //
 //	```html
 //	<div class="ui_badge">
+//	 <span class="badge_content">0</span>
 //	 <span class="ui_icon icon_envelope"></span>
 //	</div>
 //	```
@@ -58,7 +59,6 @@
 		color: var(--color-info-text);
 		font-size: var(--fs-xs);
 		line-height: var(--fs-xs);
-		text-align: center;
 	}
 
 	&:has(.badge_content):after
