--- a/dev/proto/ui_catalog/assets/scss/themes/meower_light.scss
+++ b/dev/proto/ui_catalog/assets/scss/themes/meower_light.scss
@@ -66,7 +66,7 @@
 	--color-filled: var(--color-blue-grey-accent-3);
 	--color-filled-light: var(--color-blue-grey-accent-2);
 	--color-filled-dark: var(--color-blue-grey-accent-4);
-	--color-filled-text: var(--color-grey-black);
+	--color-filled-text: var(--color-grey-darken-4);
 	--color-border: var(--color-blue-grey-accent-4);
 	--color-border-light: var(--color-blue-grey-accent-3);
 	--color-border-dark: var(--color-black);
