--- a/dev/proto/ui_catalog/assets/scss/components/inputs/button.scss
+++ b/dev/proto/ui_catalog/assets/scss/components/inputs/button.scss
@@ -18,7 +18,9 @@
 	border-radius: var(--radius-sm);
 	padding: var(--spacing-sm) var(--spacing-lg);
 	cursor: pointer;
-	transition: all 0.3s 0s ease-in-out;
+	transition:
+		all 0.3s 0s ease-in-out,
+		transform 0.1s 0s ease-in-out;
 	white-space: nowrap;
 
 
@@ -121,5 +123,10 @@
 			color: var(--color-disabled-text);
 			border: 1px solid var(--color-disabled-text);
 		}
+	}
+
+	&:active:not(:disabled)
+	{
+		transform: scale(0.95);
 	}
 }
